@startuml ClassDiag
title EV Charge DZ — Class Diagram (Database-Oriented)

hide circle
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultFontSize 9
skinparam dpi 180
skinparam backgroundColor #FFFFFF
skinparam nodesep 20
skinparam ranksep 30
skinparam linetype ortho

skinparam class {
  BorderColor #2563EB
  HeaderBackgroundColor #1E3A8A
  FontColor #FFFFFF
  AttributeFontColor #1E293B
  BackgroundColor #EFF6FF
  ArrowColor #64748B
}

skinparam enum {
  BorderColor #D97706
  HeaderBackgroundColor #FFF7ED
  FontColor #92400E
  AttributeFontColor #92400E
  BackgroundColor #FFFBEB
}

' ── Enumerations ────────────────────────────────────────────
enum UserRole {
  super_admin
  tenant_admin
  technician
}

enum UserStatus {
  active
  suspended
}

enum StationStatus {
  available
  charging
  offline
  fault
  maintenance
}

enum SessionStatus {
  active
  completed
  stopped
  error
}

enum TicketPriority {
  low
  medium
  high
  critical
}

enum TicketStatus {
  open
  in_progress
  resolved
  escalated
}

enum TicketCategory {
  power_failure
  screen_issue
  charger_fault
  system_failure
  network_issue
  maintenance
}

enum PaymentStatus {
  paid
  unpaid
  refund
}

enum PaymentMethod {
  rfid_card
  cib
  epayment
}

enum AlertSeverity {
  info
  warning
  error
}

' ── Core entities ────────────────────────────────────────────
class Tenant <<table>> {
  +tenant_id : varchar <<PK>>
  name : varchar
  logo : varchar
  accent_color : varchar
  created_at : timestamp
}

class User <<table>> {
  +user_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  email : varchar <<UNIQUE>>
  full_name : varchar
  role : UserRole
  status : UserStatus
  privilege_template : varchar
  created_at : timestamp
}

class UserPrivilege <<table>> {
  +user_id : varchar <<FK,PK>>
  +privilege_key : varchar <<FK,PK>>
  granted_at : timestamp
}

class Station <<table>> {
  +station_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  name : varchar
  city : varchar
  latitude : decimal
  longitude : decimal
  status : StationStatus
  tariff_dzd_per_kwh : decimal
  created_at : timestamp
}

class Connector <<table>> {
  +connector_id : varchar <<PK>>
  station_id : varchar <<FK>>
  connector_type : varchar
  max_power_kw : decimal
  status : StationStatus
}

class ChargingSession <<table>> {
  +session_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  station_id : varchar <<FK>>
  connector_id : varchar <<FK>>
  user_identifier : varchar
  start_time : timestamp
  end_time : timestamp
  duration_min : integer
  energy_kwh : decimal
  cost_dzd : decimal
  status : SessionStatus
}

class Ticket <<table>> {
  +ticket_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  station_id : varchar <<FK>>
  created_by_user_id : varchar <<FK>>
  assigned_to_user_id : varchar <<FK>>
  title : varchar
  category : TicketCategory
  priority : TicketPriority
  status : TicketStatus
  sla_deadline : timestamp
  created_at : timestamp
}

class TicketActivity <<table>> {
  +activity_id : varchar <<PK>>
  ticket_id : varchar <<FK>>
  actor_user_id : varchar <<FK>>
  action : varchar
  details : text
  created_at : timestamp
}

class BillingRecord <<table>> {
  +billing_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  station_id : varchar <<FK>>
  invoice_number : varchar <<UNIQUE>>
  sessions_count : integer
  energy_kwh : decimal
  amount_dzd : decimal
  status : PaymentStatus
  payment_method : PaymentMethod
  billed_at : timestamp
}

class Alert <<table>> {
  +alert_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  station_id : varchar <<FK>>
  ticket_id : varchar <<FK>>
  severity : AlertSeverity
  message : text
  created_at : timestamp
}

' ── Relationships ────────────────────────────────────────────
Tenant      "1" -- "0..*" User
Tenant      "1" -- "0..*" Station
Tenant      "1" -- "0..*" ChargingSession
Tenant      "1" -- "0..*" Ticket
Tenant      "1" -- "0..*" BillingRecord
Tenant      "1" -- "0..*" Alert

User        "1"   -- "0..*" UserPrivilege
User        "0..1" -- "0..*" Ticket : creates >
User        "0..1" -- "0..*" Ticket : assigned to >
User        "0..1" -- "0..*" TicketActivity

Station     "1"   -- "1..*" Connector
Station     "1"   -- "0..*" ChargingSession
Station     "1"   -- "0..*" Ticket
Station     "1"   -- "0..*" BillingRecord
Station     "0..1" -- "0..*" Alert

Connector   "1"   -- "0..*" ChargingSession
Ticket      "1"   -- "0..*" TicketActivity
Ticket      "0..1" -- "0..*" Alert

@enduml
